# routes/tasks.js
@@ -2,21 +2,60 @@ const express = require("express");
 const router = express.Router();
 
 const tasksController = require("../controllers/tasks");
+const auth = require("../middleware/auth"); // JWT middleware
 
-// GET all tasks
+//
+//  GET ALL TASKS (PUBLIC)
+//
 router.get("/", tasksController.getAll);
 
-// GET single task by ID
+//
+// GET SINGLE TASK (PUBLIC)
+//
 router.get("/:id", tasksController.getSingle);
 
-// POST create task
-router.post("/", tasksController.createTask);
+//
+//  CREATE TASK (PROTECTED and SWAGGER AUTH FIX)
+//
+router.post(
+  "/",
 
-// PUT update task
+  /*
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+
+    #swagger.parameters['body'] = {
+      in: 'body',
+      description: 'Create task',
+      required: true,
+      schema: {
+        title: 'New Task',
+        description: 'Task description',
+        status: 'In Progress',
+        priority: 'High',
+        dueDate: '2026-06-01',
+        createdBy: 'Brima',
+        completed: false
+      }
+    }
+  */
+
+  auth,
+  tasksController.createTask
+);
+
+//
+//  UPDATE TASK (PROTECTED and SWAGGER AUTH FIX)
+//
 router.put(
   "/:id",
 
   /*
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+
     #swagger.parameters['body'] = {
       in: 'body',
       description: 'Update task',
@@ -33,10 +72,24 @@ router.put(
     }
   */
 
+  auth,
   tasksController.updateTask
 );
 
-// DELETE task
-router.delete("/:id", tasksController.deleteTask);
+//
+// DELETE TASK (PROTECTED and SWAGGER AUTH FIX)
+//
+router.delete(
+  "/:id",
+
+  /*
+    #swagger.security = [{
+      "bearerAuth": []
+    }]
+  */
+
+  auth,
+  tasksController.deleteTask
+);
 
 module.exports = router;
